fix(ui): hide scrollbar

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
 
   font-family: 'Open Sans';
   font-size: 16px;
+
+  overflow: hidden;
 }
 
 h1 {
